--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,25 @@
-<h1>ユーザー登録画面</h1>
-<form action="/register" method="POST">
-  <div>
-    <label for="name">名前</label>
-    <input type="text" id="name" name="name" required>
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card card-body">
+      <h1 class="text-center mb-3">ユーザー登録画面</h1>
+      <form action="/register" method="POST">
+        <div class="form-group">
+          <label for="name">名前</label>
+          <input type="text" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">
+          登録
+        </button>
+      </form>
+      <p class="lead mt-4"><a href="/login">ログイン画面</a></p>
+    </div>
   </div>
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
-  </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
-  </div>
-  <button type="submit">登録</button>
-</form>
-<a href="/login">ログイン画面</a>
+</div>
