--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://unpkg.com/quicklink@2.0.0-alpha/dist/quicklink.umd.js"></script>
+  <script>quicklink.listen();</script>
   <title>passport-login</title>
 </head>
 <body>
